Upgrade to java 25