@@ -14,15 +14,15 @@ rmdir /s /q target\image\AudioBookConverter
 
 "%JAVA_HOME%\bin\jpackage.exe" --app-version %APP_VERSION%  --icon AudioBookConverter.ico -t app-image --name AudioBookConverter --vendor Recoupler --input target\package\audiobookconverter-%APP_VERSION%-windows-installer\audiobookconverter-%APP_VERSION%\app --main-jar lib\audiobookconverter-%APP_VERSION%.jar --runtime-image target\fx-jre --dest target\image --java-options '--enable-preview'
 cd target\image
-7z.exe a -t7z -mx9 -mmt44 -sfx7z.sfx ..\release\AudioBookConverter-Portable-%APP_VERSION%.exe AudioBookConverter
-7z.exe a -tzip -mx9 -mmt44 ..\release\AudioBookConverter-Portable-%APP_VERSION%.zip AudioBookConverter
+7z.exe a -t7z -mx9 -mmt -sfx7z.sfx ..\release\AudioBookConverter-Portable-%APP_VERSION%.exe AudioBookConverter
+7z.exe a -tzip -mx9 -mmt ..\release\AudioBookConverter-Portable-%APP_VERSION%.zip AudioBookConverter
 cd ..\..
 
-"%JAVA_HOME%\bin\jpackage.exe" --app-version %APP_VERSION%  --license-file LICENSE --icon AudioBookConverter.ico -t msi --win-dir-chooser --win-shortcut --win-menu --win-menu-group AudioBookConverter --name AudioBookConverter --vendor Recoupler --input target\package\audiobookconverter-%APP_VERSION%-windows-installer\audiobookconverter-%APP_VERSION%\app --main-jar lib\audiobookconverter-%APP_VERSION%.jar --runtime-image target\fx-jre --java-options '--enable-preview'
+"%JAVA_HOME%\bin\jpackage.exe" --app-version %APP_VERSION%  --license-file LICENSE --icon AudioBookConverter.ico -t msi --win-dir-chooser --win-shortcut --win-menu --win-menu-group AudioBookConverter --name AudioBookConverter --vendor Recoupler --input target\package\audiobookconverter-%APP_VERSION%-windows-installer\audiobookconverter-%APP_VERSION%\app --main-jar lib\audiobookconverter-%APP_VERSION%.jar --runtime-image target\fx-jre
 move AudioBookConverter-%APP_VERSION%.msi target\release\AudioBookConverter-All-Users-%APP_VERSION%.msi
 
-"%JAVA_HOME%\bin\jpackage.exe" --app-version %APP_VERSION%  --license-file LICENSE --icon AudioBookConverter.ico --win-per-user-install -t msi --win-shortcut --win-menu --win-menu-group AudioBookConverter --name AudioBookConverter --vendor Recoupler --input target\package\audiobookconverter-%APP_VERSION%-windows-installer\audiobookconverter-%APP_VERSION%\app --main-jar lib\audiobookconverter-%APP_VERSION%.jar --runtime-image target\fx-jre --java-options '--enable-preview'
+"%JAVA_HOME%\bin\jpackage.exe" --app-version %APP_VERSION%  --license-file LICENSE --icon AudioBookConverter.ico --win-per-user-install -t msi --win-shortcut --win-menu --win-menu-group AudioBookConverter --name AudioBookConverter --vendor Recoupler --input target\package\audiobookconverter-%APP_VERSION%-windows-installer\audiobookconverter-%APP_VERSION%\app --main-jar lib\audiobookconverter-%APP_VERSION%.jar --runtime-image target\fx-jre
 move AudioBookConverter-%APP_VERSION%.msi target\release\AudioBookConverter-Single-User-%APP_VERSION%.msi
 
-"%JAVA_HOME%\bin\jpackage.exe" --app-version %APP_VERSION%  --license-file LICENSE --icon AudioBookConverter.ico --win-per-user-install -t msi --win-shortcut --win-menu --win-menu-group AudioBookConverter --name AudioBookConverter --vendor Recoupler --input target\package\audiobookconverter-%APP_VERSION%-windows-nodeps-installer\audiobookconverter-%APP_VERSION%\app --main-jar lib\audiobookconverter-%APP_VERSION%.jar --runtime-image target\fx-jre --java-options '--enable-preview'
+"%JAVA_HOME%\bin\jpackage.exe" --app-version %APP_VERSION%  --license-file LICENSE --icon AudioBookConverter.ico --win-per-user-install -t msi --win-shortcut --win-menu --win-menu-group AudioBookConverter --name AudioBookConverter --vendor Recoupler --input target\package\audiobookconverter-%APP_VERSION%-windows-nodeps-installer\audiobookconverter-%APP_VERSION%\app --main-jar lib\audiobookconverter-%APP_VERSION%.jar --runtime-image target\fx-jre
 move AudioBookConverter-%APP_VERSION%.msi target\release\AudioBookConverter-NoDeps-%APP_VERSION%.msi
